<resources>
    <string name="app_name">sharedPreferences</string>
    <string name="buttoninput">Reference Input</string>
    <string name="buttonoutput">Reference Output</string>
    <string name="textView">Shared Preference</string>
    <string name="textViewinput">Shared Preference</string>
    <string name="button">Save</string>
    <string name="editText">name</string>
    <string name="textView2">Shared Preference</string>
    <string name="editTextpw">PassWord</string>
    <string name="editTextemail">E-mail</string>
</resources>
