<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:text="@string/textView"
            android:textAlignment="center"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttoninput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttoninput" />

        <Button
            android:id="@+id/buttonoutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonoutput" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>